Revert "Simplify job config."
I guess we have to specify 'stable'.

This reverts commit 85747c98db58c3d05c0c9cdd998b7d64ee9fa5fb.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
+      with:
+        go-version: 'stable'
     - uses: actions/cache@v2
       with:
         path: ~/go/pkg/mod
